WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
262644
[WebGPU] built-in arrayLength is not supported - pipeline change
https://bugs.webkit.org/show_bug.cgi?id=262644
Summary
[WebGPU] built-in arrayLength is not supported - pipeline change
Mike Wyrzykowski
Reported
2023-10-04 14:04:05 PDT
[WebGPU] built-in arrayLength is not supported - pipeline change
Attachments
Add attachment
proposed patch, testcase, etc.
Mike Wyrzykowski
Comment 1
2023-10-04 14:04:15 PDT
radar://116482015
Mike Wyrzykowski
Comment 2
2023-10-04 14:13:30 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/18640
EWS
Comment 3
2023-10-04 17:47:59 PDT
Committed
268884@main
(d265fb0d526a): <
https://commits.webkit.org/268884@main
> Reviewed commits have been landed. Closing PR #18640 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug